2010-07-07  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs: Text marker now defaults to
	  visible.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Fixed GTK
	  critical when closing a text editor.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: Fixed single line
	  indent/outdent (Bug 619798 - Outdent a selected line selects
	  the next line).

2010-07-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Theatrics/SmartScrolledWindow.cs: Fixed text
	  editor splitting.

2010-07-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/TextEditor.cs: Fixed some issues.

2010-07-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextLinkEditMode.cs: Fixed text link
	  markers.

2010-06-29  Mike Krüger  <mkrueger@novell.com>

	* Styles/BrownStyle.xml:
	* Styles/IrBlackStyle.xml:
	* Styles/OblivionStyle.xml:
	* Styles/TangoLightStyle.xml:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/Style.cs: Some styling changes
	  for the version control gui.

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs: Fixed 'Bug 616949 -
	  Message bubbles prevents the background color of selected
	  text to change'.

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs: Fixed 'Bug 616921 -
	  "Move the line or highlighted selection up" command deletes
	  selection'.

2010-06-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: Check if
	  line is valid.

2010-06-23  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Document.cs: Fixed 'Bug 616128 - Text editor
	  hiccoughs every 2 seconds (approx.)'.

2010-06-23  Mike Krüger  <mkrueger@novell.com>
