@@ -1,3 +1,8 @@
+2010-07-08  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor/TextMarker.cs: Changed the isVisible flag
+	  setting.
+
 2010-07-07  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/TextMarker.cs: Text marker now defaults to
